--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "module": "./dist/use-aria-live.module.js",
   "unpkg": "./dist/use-aria-live.umd.js",
   "scripts": {
+    "prepublish": "npm run build",
     "build": "microbundle --jsx React.createElement",
     "dev": "microbundle watch --jsx React.createElement",
     "test": "echo \"Error: no test specified\" && exit 1"
