--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "dev": "microbundle watch --jsx React.createElement",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chantastic/use-aria-live.git"
