--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "use-aria-live",
   "version": "0.0.4",
   "description": "A React hook for Aria Live Regions",
-  "type": "module",
   "source": "src/index.js",
   "exports": "./dist/use-aria-live.modern.js",
   "main": "./dist/use-aria-live.cjs",
@@ -12,7 +11,9 @@
     "prepublish": "npm run build",
     "build": "microbundle --jsx React.createElement",
     "dev": "microbundle watch --jsx React.createElement",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "files": [
     "dist"
@@ -31,6 +32,13 @@
     "react": "^17.0.2"
   },
   "devDependencies": {
-    "microbundle": "^0.13.3"
+    "@babel/core": "^7.14.8",
+    "@storybook/addon-actions": "^6.3.6",
+    "@storybook/addon-essentials": "^6.3.6",
+    "@storybook/addon-links": "^6.3.6",
+    "@storybook/react": "^6.3.6",
+    "babel-loader": "^8.2.2",
+    "microbundle": "^0.13.3",
+    "react-dom": "^17.0.2"
   }
 }
