--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@storybook/addon-essentials": "^6.3.6",
     "@storybook/addon-links": "^6.3.6",
     "@storybook/react": "^6.3.6",
+    "@testing-library/dom": "^8.1.0",
+    "@testing-library/user-event": "^13.2.1",
     "babel-loader": "^8.2.2",
     "microbundle": "^0.13.3",
     "react-dom": "^17.0.2"
